src/c2newspeak/parser.output
   0  $accept : %entry% $end

   1  parse : translation_unit EOF

   2  translation_unit : NPK translation_unit
   3                   | external_declaration translation_unit
   4                   | SEMICOLON translation_unit
   5                   |

   6  function_prologue : declaration_specifiers function_declarator

   7  function_declarator : pointer direct_declarator
   8                      | direct_declarator
   9                      | pointer direct_declarator LPAREN identifier_list RPAREN old_parameter_declaration_list
  10                      | direct_declarator LPAREN identifier_list RPAREN old_parameter_declaration_list

  11  function_definition : function_prologue compound_statement

  12  declaration : declaration_specifiers init_declarator_list
  13              | typeof_declaration

  14  typeof_declaration : type_qualifier_list TYPEOF LPAREN type_specifier pointer RPAREN type_qualifier_list ident_or_tname

  15  init_declarator_list :
  16                       | non_empty_init_declarator_list

  17  non_empty_init_declarator_list : init_declarator COMMA non_empty_init_declarator_list
  18                                 | init_declarator

  19  init_declarator : attr_declarator
  20                  | attr_declarator EQ init

  21  attr_declarator : declarator extended_attribute_list

  22  declarator : pointer direct_declarator
  23             | direct_declarator

  24  direct_declarator : ident_or_tname
  25                    | LPAREN declarator RPAREN
  26                    | direct_declarator LBRACKET expression_sequence RBRACKET
  27                    | direct_declarator LBRACKET type_qualifier_list RBRACKET
  28                    | direct_declarator LPAREN parameter_list RPAREN
  29                    | direct_declarator LPAREN RPAREN

  30  identifier_list : IDENTIFIER COMMA identifier_list
  31                  | IDENTIFIER

  32  struct_declarator_list : struct_declarator COMMA struct_declarator_list
  33                         | struct_declarator

  34  struct_declarator : declarator
  35                    | declarator COLON expression
  36                    | COLON expression

  37  old_parameter_declaration_list : old_parameter_declaration old_parameter_declaration_list
  38                                 | old_parameter_declaration

  39  old_parameter_declaration : declaration SEMICOLON

  40  parameter_declaration : declaration_specifiers declarator
  41                        | declaration_specifiers abstract_declarator
  42                        | declaration_specifiers

  43  type_name : declaration_specifiers
  44            | declaration_specifiers abstract_declarator

  45  declaration_specifiers : type_qualifier_list type_specifier type_qualifier_list

  46  type_qualifier_list : type_qualifier type_qualifier_list
  47                      |

  48  compound_statement : LBRACE statement_list RBRACE

  49  statement_list : statement statement_list
  50                 |

  51  statement : IDENTIFIER COLON statement
  52            | declaration SEMICOLON
  53            | STATIC declaration SEMICOLON
  54            | EXTERN declaration SEMICOLON
  55            | TYPEDEF declaration SEMICOLON
  56            | IF LPAREN expression_sequence RPAREN statement
  57            | IF LPAREN expression_sequence RPAREN statement ELSE statement
  58            | switch_stmt
  59            | iteration_statement
  60            | RETURN expression_sequence SEMICOLON
  61            | RETURN SEMICOLON
  62            | expression_sequence SEMICOLON
  63            | BREAK SEMICOLON
  64            | CONTINUE SEMICOLON
  65            | GOTO IDENTIFIER SEMICOLON
  66            | compound_statement
  67            | SEMICOLON
  68            | asm SEMICOLON
  69            | NPK

  70  asm : ASM LPAREN asm_statement_list RPAREN
  71      | ASM VOLATILE LPAREN asm_statement_list RPAREN

  72  asm_statement_list : asm_statement
  73                     | asm_statement COLON asm_statement_list
  74                     | COLON asm_statement_list
  75                     | asm_statement COMMA asm_statement_list

  76  asm_statement : string_literal
  77                | string_literal LPAREN expression RPAREN
  78                | LBRACKET ident_or_tname RBRACKET string_literal LPAREN expression RPAREN

  79  iteration_statement : FOR LPAREN assignment_expression_list SEMICOLON expression_statement assignment_expression_list RPAREN statement
  80                      | FOR LPAREN SEMICOLON expression_statement assignment_expression_list RPAREN statement
  81                      | FOR LPAREN assignment_expression_list SEMICOLON expression_statement RPAREN statement
  82                      | FOR LPAREN SEMICOLON expression_statement RPAREN statement
  83                      | WHILE LPAREN expression_sequence RPAREN statement
  84                      | DO statement WHILE LPAREN expression_sequence RPAREN SEMICOLON

  85  expression_statement : SEMICOLON
  86                       | expression SEMICOLON

  87  switch_stmt : SWITCH LPAREN expression_sequence RPAREN LBRACE case_list RBRACE

  88  case_list : CASE expression_sequence COLON statement_list case_list
  89            | DEFAULT COLON statement_list case_list
  90            |

  91  assignment_expression_list : expression COMMA assignment_expression_list
  92                             | expression

  93  constant : CHARACTER
  94           | INTEGER
  95           | FLOATCST

  96  string_literal : STRING
  97                 | STRING string_literal

  98  expression : IDENTIFIER
  99             | constant
 100             | string_literal
 101             | FUNNAME
 102             | LPAREN expression_sequence RPAREN
 103             | LPAREN compound_statement RPAREN
 104             | expression LBRACKET expression_sequence RBRACKET
 105             | expression LPAREN argument_expression_list RPAREN
 106             | expression DOT ident_or_tname
 107             | expression ARROW ident_or_tname
 108             | expression PLUSPLUS
 109             | expression MINUSMINUS
 110             | BUILTIN_CONSTANT_P LPAREN expression_sequence RPAREN
 111             | OFFSETOF LPAREN type_name COMMA IDENTIFIER RPAREN
 112             | PLUSPLUS expression
 113             | MINUSMINUS expression
 114             | AMPERSAND expression
 115             | STAR expression
 116             | BNOT expression
 117             | NOT expression
 118             | MINUS expression
 119             | PLUS expression
 120             | SIZEOF expression
 121             | SIZEOF LPAREN type_name RPAREN
 122             | EXTENSION expression
 123             | LPAREN type_name RPAREN expression
 124             | LPAREN type_name RPAREN composite
 125             | expression STAR expression
 126             | expression DIV expression
 127             | expression MOD expression
 128             | expression PLUS expression
 129             | expression MINUS expression
 130             | expression SHIFTL expression
 131             | expression SHIFTR expression
 132             | expression GT expression
 133             | expression GTEQ expression
 134             | expression LT expression
 135             | expression LTEQ expression
 136             | expression EQEQ expression
 137             | expression NOTEQ expression
 138             | expression AMPERSAND expression
 139             | expression BXOR expression
 140             | expression BOR expression
 141             | expression AND expression
 142             | expression OR expression
 143             | expression QMARK expression_sequence COLON expression
 144             | expression QMARK COLON expression
 145             | expression assignment_operator expression

 146  expression_sequence : expression
 147                      | expression_sequence COMMA expression

 148  assignment_operator : EQ
 149                      | assignment_op_operator

 150  assignment_op_operator : PLUSEQ
 151                         | MINUSEQ
 152                         | STAREQ
 153                         | DIVEQ
 154                         | MODEQ
 155                         | OREQ
 156                         | AMPERSANDEQ
 157                         | SHIFTLEQ
 158                         | SHIFTREQ
 159                         | BXOREQ

 160  argument_expression_list :
 161                           | nonempty_argument_expression_list

 162  nonempty_argument_expression_list : expression
 163                                    | expression COMMA nonempty_argument_expression_list

 164  init : expression
 165       | composite

 166  composite : LBRACE init_list RBRACE
 167            | LBRACE named_init_list RBRACE

 168  named_init_list : named_init COMMA named_init_list
 169                  | named_init
 170                  | named_init COMMA

 171  named_init : DOT IDENTIFIER EQ expression
 172             | DOT IDENTIFIER EQ LBRACE init_list RBRACE

 173  init_list : init COMMA init_list
 174            | init
 175            |

 176  abstract_declarator : pointer
 177                      | direct_abstract_declarator
 178                      | pointer direct_abstract_declarator

 179  direct_abstract_declarator : LPAREN abstract_declarator RPAREN
 180                             | LBRACKET type_qualifier_list RBRACKET
 181                             | LBRACKET expression_sequence RBRACKET
 182                             | direct_abstract_declarator LBRACKET expression_sequence RBRACKET
 183                             | direct_abstract_declarator LPAREN parameter_list RPAREN
 184                             | direct_abstract_declarator LPAREN RPAREN

 185  pointer : STAR type_qualifier_list
 186          | STAR type_qualifier_list pointer

 187  field_list : gnuc_field_declaration SEMICOLON field_list
 188             | gnuc_field_declaration SEMICOLON

 189  parameter_list : parameter_declaration COMMA parameter_list
 190                 | parameter_declaration
 191                 | ELLIPSIS

 192  ityp : CHAR
 193       | SHORT INT
 194       | INT
 195       | LONG INT
 196       | LONG LONG INT
 197       | SHORT
 198       | LONG
 199       | LONG LONG

 200  ident_or_tname : IDENTIFIER
 201                 | TYPEDEF_NAME

 202  enum_list : enum
 203            | enum COMMA enum_list
 204            | enum COMMA

 205  enum : IDENTIFIER
 206       | IDENTIFIER EQ expression

 207  field_blk : LBRACE field_list RBRACE
 208            | LBRACE RBRACE

 209  ftyp : FLOAT
 210       | DOUBLE
 211       | LONG DOUBLE

 212  type_specifier : VOID
 213                 | ityp
 214                 | SIGNED ityp
 215                 | LONG LONG UNSIGNED INT
 216                 | UNSIGNED ityp
 217                 | UNSIGNED
 218                 | LONG SIGNED INT
 219                 | LONG SIGNED
 220                 | LONG UNSIGNED INT
 221                 | LONG UNSIGNED
 222                 | SHORT SIGNED INT
 223                 | SHORT SIGNED
 224                 | SHORT UNSIGNED INT
 225                 | SHORT UNSIGNED
 226                 | ftyp
 227                 | STRUCT field_blk
 228                 | STRUCT ident_or_tname
 229                 | STRUCT ident_or_tname field_blk
 230                 | UNION field_blk
 231                 | UNION ident_or_tname
 232                 | UNION ident_or_tname field_blk
 233                 | TYPEDEF_NAME
 234                 | ENUM LBRACE enum_list RBRACE
 235                 | ENUM IDENTIFIER
 236                 | ENUM IDENTIFIER LBRACE enum_list RBRACE
 237                 | TYPEOF LPAREN type_specifier RPAREN
 238                 | TYPEOF LPAREN IDENTIFIER RPAREN
 239                 | VA_LIST

 240  external_declaration : STATIC declaration SEMICOLON
 241                       | function_definition
 242                       | STATIC function_definition
 243                       | INLINE STATIC function_definition
 244                       | ATTRIBUTE LPAREN LPAREN attribute_name_list RPAREN RPAREN STATIC function_definition
 245                       | optional_extension EXTERN function_definition
 246                       | optional_extension TYPEDEF declaration SEMICOLON
 247                       | EXTENSION declaration SEMICOLON
 248                       | declaration SEMICOLON
 249                       | optional_extension EXTERN declaration SEMICOLON
 250                       | asm SEMICOLON

 251  optional_extension : EXTENSION
 252                     |

 253  attribute_list : attribute attribute_list
 254                 |

 255  extended_attribute_list : attribute extended_attribute_list
 256                          | asm extended_attribute_list
 257                          |

 258  type_qualifier : CONST
 259                 | attribute
 260                 | VOLATILE
 261                 | AUTO
 262                 | REGISTER

 263  gnuc_field_declaration : optional_extension field_declaration

 264  field_declaration : declaration_specifiers struct_declarator_list attribute_list
 265                    | declaration_specifiers

 266  attribute : ATTRIBUTE LPAREN LPAREN attribute_name_list RPAREN RPAREN
 267            | INLINE
 268            | CDECL
 269            | RESTRICT

 270  attribute_name_list : attribute_name COMMA attribute_name_list
 271                      | attribute_name

 272  attribute_name : IDENTIFIER
 273                 | IDENTIFIER LPAREN string_list RPAREN
 274                 | IDENTIFIER LPAREN integer_list RPAREN
 275                 | IDENTIFIER LPAREN LPAREN IDENTIFIER LPAREN type_name RPAREN RPAREN RPAREN
 276                 | IDENTIFIER LPAREN IDENTIFIER COMMA INTEGER COMMA INTEGER RPAREN
 277                 | IDENTIFIER LPAREN IDENTIFIER RPAREN
 278                 | CONST

 279  string_list : STRING
 280              | STRING string_list

 281  integer_list : INTEGER
 282               | INTEGER COMMA integer_list

 283  assertion : SYMBOL assertion
 284            | IDENTIFIER assertion
 285            | constant assertion
 286            | EOF

 287  %entry% : '\001' parse
 288          | '\002' assertion

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . parse  (287)
	translation_unit : .  (5)
	type_qualifier_list : .  (47)
	optional_extension : .  (252)

	CONST  shift 4
	STATIC  shift 5
	REGISTER  shift 6
	AUTO  shift 7
	VOLATILE  shift 8
	SEMICOLON  shift 9
	ATTRIBUTE  shift 10
	EXTENSION  shift 11
	CDECL  shift 12
	INLINE  shift 13
	ASM  shift 14
	RESTRICT  shift 15
	NPK  shift 16
	ENUM  reduce 47
	EXTERN  reduce 252
	TYPEDEF  reduce 252
	CHAR  reduce 47
	DOUBLE  reduce 47
	FLOAT  reduce 47
	INT  reduce 47
	SHORT  reduce 47
	LONG  reduce 47
	STRUCT  reduce 47
	UNION  reduce 47
	SIGNED  reduce 47
	UNSIGNED  reduce 47
	VOID  reduce 47
	VA_LIST  reduce 47
	TYPEOF  reduce 47
	EOF  reduce 5
	TYPEDEF_NAME  reduce 47

	parse  goto 17
	translation_unit  goto 18
	external_declaration  goto 19
	function_prologue  goto 20
	declaration_specifiers  goto 21
	function_definition  goto 22
	declaration  goto 23
	typeof_declaration  goto 24
	type_qualifier_list  goto 25
	type_qualifier  goto 26
	asm  goto 27
	optional_extension  goto 28
	attribute  goto 29


state 2
	%entry% : '\002' . assertion  (288)

	EOF  shift 30
	SYMBOL  shift 31
	IDENTIFIER  shift 32
	INTEGER  shift 33
	CHARACTER  shift 34
	FLOATCST  shift 35
	.  error

	assertion  goto 36
	constant  goto 37


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	type_qualifier : CONST .  (258)

	.  reduce 258


state 5
	external_declaration : STATIC . declaration SEMICOLON  (240)
	external_declaration : STATIC . function_definition  (242)
	type_qualifier_list : .  (47)

	CONST  shift 4
	REGISTER  shift 6
	AUTO  shift 7
	VOLATILE  shift 8
	ATTRIBUTE  shift 38
	CDECL  shift 12
	INLINE  shift 39
	RESTRICT  shift 15
	ENUM  reduce 47
	CHAR  reduce 47
	DOUBLE  reduce 47
	FLOAT  reduce 47
	INT  reduce 47
	SHORT  reduce 47
	LONG  reduce 47
	STRUCT  reduce 47
	UNION  reduce 47
	SIGNED  reduce 47
	UNSIGNED  reduce 47
	VOID  reduce 47
	VA_LIST  reduce 47
	TYPEOF  reduce 47
	TYPEDEF_NAME  reduce 47

	function_prologue  goto 20
	declaration_specifiers  goto 21
	function_definition  goto 40
	declaration  goto 41
	typeof_declaration  goto 24
	type_qualifier_list  goto 25
	type_qualifier  goto 26
	attribute  goto 29


state 6
	type_qualifier : REGISTER .  (262)

	.  reduce 262


state 7
	type_qualifier : AUTO .  (261)

	.  reduce 261


state 8
	type_qualifier : VOLATILE .  (260)

	.  reduce 260


state 9
	translation_unit : SEMICOLON . translation_unit  (4)
	translation_unit : .  (5)
	type_qualifier_list : .  (47)
	optional_extension : .  (252)

	CONST  shift 4
	STATIC  shift 5
	REGISTER  shift 6
	AUTO  shift 7
	VOLATILE  shift 8
	SEMICOLON  shift 9
	ATTRIBUTE  shift 10
	EXTENSION  shift 11
	CDECL  shift 12
	INLINE  shift 13
	ASM  shift 14
	RESTRICT  shift 15
	NPK  shift 16
	ENUM  reduce 47
	EXTERN  reduce 252
	TYPEDEF  reduce 252
	CHAR  reduce 47
	DOUBLE  reduce 47
	FLOAT  reduce 47
	INT  reduce 47
	SHORT  reduce 47
	LONG  reduce 47
	STRUCT  reduce 47
	UNION  reduce 47
	SIGNED  reduce 47
	UNSIGNED  reduce 47
	VOID  reduce 47
	VA_LIST  reduce 47
	TYPEOF  reduce 47
	EOF  reduce 5
	TYPEDEF_NAME  reduce 47

	translation_unit  goto 42
	external_declaration  goto 19
	function_prologue  goto 20
	declaration_specifiers  goto 21
	function_definition  goto 22
	declaration  goto 23
	typeof_declaration  goto 24
	type_qualifier_list  goto 25
	type_qualifier  goto 26
	asm  goto 27
	optional_extension  goto 28
	attribute  goto 29


state 10
	external_declaration : ATTRIBUTE . LPAREN LPAREN attribute_name_list RPAREN RPAREN STATIC function_definition  (244)
	attribute : ATTRIBUTE . LPAREN LPAREN attribute_name_list RPAREN RPAREN  (266)

	LPAREN  shift 43
	.  error


state 11
	external_declaration : EXTENSION . declaration SEMICOLON  (247)
	optional_extension : EXTENSION .  (251)
	type_qualifier_list : .  (47)

	CONST  shift 4
	REGISTER  shift 6
	AUTO  shift 7
	VOLATILE  shift 8
	ATTRIBUTE  shift 38
	CDECL  shift 12
	INLINE  shift 39
	RESTRICT  shift 15
	ENUM  reduce 47
	EXTERN  reduce 251
	TYPEDEF  reduce 251
	CHAR  reduce 47
	DOUBLE  reduce 47
	FLOAT  reduce 47
	INT  reduce 47
	SHORT  reduce 47
	LONG  reduce 47
	STRUCT  reduce 47
	UNION  reduce 47
	SIGNED  reduce 47
	UNSIGNED  reduce 47
	VOID  reduce 47
	VA_LIST  reduce 47
	TYPEOF  reduce 47
	TYPEDEF_NAME  reduce 47

	declaration_specifiers  goto 44
	declaration  goto 45
	typeof_declaration  goto 24
	type_qualifier_list  goto 25
	type_qualifier  goto 26
	attribute  goto 29


state 12
	attribute : CDECL .  (268)

	.  reduce 268


state 13
	external_declaration : INLINE . STATIC function_definition  (243)
	attribute : INLINE .  (267)

	STATIC  shift 46
	CONST  reduce 267
	ENUM  reduce 267
	REGISTER  reduce 267
	AUTO  reduce 267
	VOLATILE  reduce 267
	CHAR  reduce 267
	DOUBLE  reduce 267
	FLOAT  reduce 267
	INT  reduce 267
	SHORT  reduce 267
	LONG  reduce 267
	STRUCT  reduce 267
	UNION  reduce 267
	SIGNED  reduce 267
	UNSIGNED  reduce 267
	VOID  reduce 267
	ATTRIBUTE  reduce 267
	VA_LIST  reduce 267
	CDECL  reduce 267
	INLINE  reduce 267
	RESTRICT  reduce 267
	TYPEOF  reduce 267
	TYPEDEF_NAME  reduce 267


state 14
	asm : ASM . LPAREN asm_statement_list RPAREN  (70)
	asm : ASM . VOLATILE LPAREN asm_statement_list RPAREN  (71)

	VOLATILE  shift 47
	LPAREN  shift 48
	.  error


state 15
	attribute : RESTRICT .  (269)

	.  reduce 269


state 16
	translation_unit : NPK . translation_unit  (2)
	translation_unit : .  (5)
	type_qualifier_list : .  (47)
	optional_extension : .  (252)

	CONST  shift 4
	STATIC  shift 5
	REGISTER  shift 6
	AUTO  shift 7
	VOLATILE  shift 8
	SEMICOLON  shift 9
	ATTRIBUTE  shift 10
	EXTENSION  shift 11
	CDECL  shift 12
	INLINE  shift 13
	ASM  shift 14
	RESTRICT  shift 15
	NPK  shift 16
	ENUM  reduce 47
	EXTERN  reduce 252
	TYPEDEF  reduce 252
	CHAR  reduce 47
	DOUBLE  reduce 47
	FLOAT  reduce 47
	INT  reduce 47
	SHORT  reduce 47
	LONG  reduce 47
	STRUCT  reduce 47
	UNION  reduce 47
	SIGNED  reduce 47
	UNSIGNED  reduce 47
	VOID  reduce 47
	VA_LIST  reduce 47
	TYPEOF  reduce 47
	EOF  reduce 5
	TYPEDEF_NAME  reduce 47

	translation_unit  goto 49
	external_declaration  goto 19
	function_prologue  goto 20
	declaration_specifiers  goto 21
	function_definition  goto 22
	declaration  goto 23
	typeof_declaration  goto 24
	type_qualifier_list  goto 25
	type_qualifier  goto 26
	asm  goto 27
	optional_extension  goto 28
	attribute  goto 29


state 17
	%entry% : '\001' parse .  (287)

	.  reduce 287


state 18
	parse : translation_unit . EOF  (1)

	EOF  shift 50
	.  error


state 19
	translation_unit : external_declaration . translation_unit  (3)
	translation_unit : .  (5)
	type_qualifier_list : .  (47)
	optional_extension : .  (252)

	CONST  shift 4
	STATIC  shift 5
	REGISTER  shift 6
	AUTO  shift 7
	VOLATILE  shift 8
	SEMICOLON  shift 9
	ATTRIBUTE  shift 10
	EXTENSION  shift 11
	CDECL  shift 12
	INLINE  shift 13
	ASM  shift 14
	RESTRICT  shift 15
	NPK  shift 16
	ENUM  reduce 47
	EXTERN  reduce 252
	TYPEDEF  reduce 252
	CHAR  reduce 47
	DOUBLE  reduce 47
	FLOAT  reduce 47
	INT  reduce 47
	SHORT  reduce 47
	LONG  reduce 47
	STRUCT  reduce 47
	UNION  reduce 47
	SIGNED  reduce 47
	UNSIGNED  reduce 47
	VOID  reduce 47
	VA_LIST  reduce 47
	TYPEOF  reduce 47
	EOF  reduce 5
	TYPEDEF_NAME  reduce 47

	translation_unit  goto 51
	external_declaration  goto 19
	function_prologue  goto 20
	declaration_specifiers  goto 21
	function_definition  goto 22
	declaration  goto 23
	typeof_declaration  goto 24
	type_qualifier_list  goto 25
	type_qualifier  goto 26
	asm  goto 27
	optional_extension  goto 28
	attribute  goto 29


state 20
	function_definition : function_prologue . compound_statement  (11)

	LBRACE  shift 52
	.  error

	compound_statement  goto 53


state 21
	function_prologue : declaration_specifiers . function_declarator  (6)
	declaration : declaration_specifiers . init_declarator_list  (12)
	init_declarator_list : .  (15)

	LPAREN  shift 54
	STAR  shift 55
	IDENTIFIER  shift 56
	TYPEDEF_NAME  shift 57
	SEMICOLON  reduce 15

	function_declarator  goto 58
	pointer  goto 59
	direct_declarator  goto 60
	init_declarator_list  goto 61
	ident_or_tname  goto 62
	non_empty_init_declarator_list  goto 63
	init_declarator  goto 64
	attr_declarator  goto 65
	declarator  goto 66


state 22
	external_declaration : function_definition .  (241)

	.  reduce 241


state 23
	external_declaration : declaration . SEMICOLON  (248)

	SEMICOLON  shift 67
	.  error


state 24
	declaration : typeof_declaration .  (13)

	.  reduce 13


state 25
	typeof_declaration : type_qualifier_list . TYPEOF LPAREN type_specifier pointer RPAREN type_qualifier_list ident_or_tname  (14)
	declaration_specifiers : type_qualifier_list . type_specifier type_qualifier_list  (45)

	ENUM  shift 68
	CHAR  shift 69
	DOUBLE  shift 70
	FLOAT  shift 71
	INT  shift 72
	SHORT  shift 73
	LONG  shift 74
	STRUCT  shift 75
	UNION  shift 76
	SIGNED  shift 77
	UNSIGNED  shift 78
	VOID  shift 79
	VA_LIST  shift 80
	TYPEOF  shift 81
	TYPEDEF_NAME  shift 82
	.  error

	type_specifier  goto 83
	ityp  goto 84
	ftyp  goto 85


state 26
	type_qualifier_list : type_qualifier . type_qualifier_list  (46)
	type_qualifier_list : .  (47)

	CONST  shift 4
	REGISTER  shift 6
	AUTO  shift 7
	VOLATILE  shift 8
	ATTRIBUTE  shift 38
	CDECL  shift 12
	INLINE  shift 39
	RESTRICT  shift 15
	ENUM  reduce 47
	CHAR  reduce 47
	DOUBLE  reduce 47
	FLOAT  reduce 47
	INT  reduce 47
	SHORT  reduce 47
	LONG  reduce 47
	STRUCT  reduce 47
	UNION  reduce 47
	SIGNED  reduce 47
	UNSIGNED  reduce 47
	VOID  reduce 47
	COLON  reduce 47
	COMMA  reduce 47
	LBRACKET  reduce 47
	RBRACKET  reduce 47
	LPAREN  reduce 47
	RPAREN  reduce 47
	SEMICOLON  reduce 47
	STAR  reduce 47
	VA_LIST  reduce 47
	TYPEOF  reduce 47
	IDENTIFIER  reduce 47
	TYPEDEF_NAME  reduce 47

	type_qualifier_list  goto 86
	type_qualifier  goto 26
	attribute  goto 29


state 27
	external_declaration : asm . SEMICOLON  (250)

	SEMICOLON  shift 87
	.  error


state 28
	external_declaration : optional_extension . EXTERN function_definition  (245)
	external_declaration : optional_extension . TYPEDEF declaration SEMICOLON  (246)
	external_declaration : optional_extension . EXTERN declaration SEMICOLON  (249)

	EXTERN  shift 88
	TYPEDEF  shift 89
	.  error


state 29
	type_qualifier : attribute .  (259)

	.  reduce 259


state 30
	assertion : EOF .  (286)

	.  reduce 286


state 31
	assertion : SYMBOL . assertion  (283)

	EOF  shift 30
	SYMBOL  shift 31
	IDENTIFIER  shift 32
	INTEGER  shift 33
	CHARACTER  shift 34
	FLOATCST  shift 35
	.  error

	assertion  goto 90
	constant  goto 37


state 32
	assertion : IDENTIFIER . assertion  (284)

	EOF  shift 30
	SYMBOL  shift 31
	IDENTIFIER  shift 32
	INTEGER  shift 33
	CHARACTER  shift 34
	FLOATCST  shift 35
	.  error

	assertion  goto 91
	constant  goto 37


state 33
	constant : INTEGER .  (94)

	.  reduce 94


state 34
	constant : CHARACTER .  (93)

	.  reduce 93


state 35
	constant : FLOATCST .  (95)

	.  reduce 95


state 36
	%entry% : '\002' assertion .  (288)

	.  reduce 288


state 37
	assertion : constant . assertion  (285)

	EOF  shift 30
	SYMBOL  shift 31
	IDENTIFIER  shift 32
	INTEGER  shift 33
	CHARACTER  shift 34
	FLOATCST  shift 35
	.  error

	assertion  goto 92
	constant  goto 37


state 38
	attribute : ATTRIBUTE . LPAREN LPAREN attribute_name_list RPAREN RPAREN  (266)

	LPAREN  shift 93
	.  error


state 39
	attribute : INLINE .  (267)

	.  reduce 267


state 40
	external_declaration : STATIC function_definition .  (242)

	.  reduce 242


state 41
	external_declaration : STATIC declaration . SEMICOLON  (240)

	SEMICOLON  shift 94
	.  error


state 42
	translation_unit : SEMICOLON translation_unit .  (4)

	.  reduce 4


state 43
	external_declaration : ATTRIBUTE LPAREN . LPAREN attribute_name_list RPAREN RPAREN STATIC function_definition  (244)
	attribute : ATTRIBUTE LPAREN . LPAREN attribute_name_list RPAREN RPAREN  (266)

	LPAREN  shift 95
	.  error


state 44
	declaration : declaration_specifiers . init_declarator_list  (12)
	init_declarator_list : .  (15)

	LPAREN  shift 54
	STAR  shift 55
	IDENTIFIER  shift 56
	TYPEDEF_NAME  shift 57
	SEMICOLON  reduce 15

	pointer  goto 96
	direct_declarator  goto 97
	init_declarator_list  goto 61
	ident_or_tname  goto 62
	non_empty_init_declarator_list  goto 63
	init_declarator  goto 64
	attr_declarator  goto 65
	declarator  goto 66


state 45
	external_declaration : EXTENSION declaration . SEMICOLON  (247)

	SEMICOLON  shift 98
	.  error


state 46
	external_declaration : INLINE STATIC . function_definition  (243)
	type_qualifier_list : .  (47)

	CONST  shift 4
	REGISTER  shift 6
	AUTO  shift 7
	VOLATILE  shift 8
	ATTRIBUTE  shift 38
	CDECL  shift 12
	INLINE  shift 39
	RESTRICT  shift 15
	ENUM  reduce 47
	CHAR  reduce 47
	DOUBLE  reduce 47
	FLOAT  reduce 47
	INT  reduce 47
	SHORT  reduce 47
	LONG  reduce 47
	STRUCT  reduce 47
	UNION  reduce 47
	SIGNED  reduce 47
	UNSIGNED  reduce 47
	VOID  reduce 47
	VA_LIST  reduce 47
	TYPEOF  reduce 47
	TYPEDEF_NAME  reduce 47

	function_prologue  goto 20
	declaration_specifiers  goto 99
	function_definition  goto 100
	type_qualifier_list  goto 101
	type_qualifier  goto 26
	attribute  goto 29


state 47
	asm : ASM VOLATILE . LPAREN asm_statement_list RPAREN  (71)

	LPAREN  shift 102
	.  error


state 48
	asm : ASM LPAREN . asm_statement_list RPAREN  (70)

	COLON  shift 103
	LBRACKET  shift 104
	STRING  shift 105
	.  error

	asm_statement_list  goto 106
	asm_statement  goto 107
	string_literal  goto 108


state 49
	translation_unit : NPK translation_unit .  (2)

	.  reduce 2


state 50
	parse : translation_unit EOF .  (1)

	.  reduce 1


state 51
	translation_unit : external_declaration translation_unit .  (3)

	.  reduce 3


state 52
	compound_statement : LBRACE . statement_list RBRACE  (48)
	type_qualifier_list : .  (47)
	statement_list : .  (50)

	BREAK  shift 109
	CONST  shift 4
	CONTINUE  shift 110
	DO  shift 111
	STATIC  shift 112
	EXTERN  shift 113
	FOR  shift 114
	IF  shift 115
	REGISTER  shift 6
	AUTO  shift 7
	RETURN  shift 116
	VOLATILE  shift 8
	SWITCH  shift 117
	TYPEDEF  shift 118
	WHILE  shift 119
	GOTO  shift 120
	LBRACE  shift 52
	LPAREN  shift 121
	NOT  shift 122
	SEMICOLON  shift 123
	AMPERSAND  shift 124
	MINUS  shift 125
	PLUS  shift 126
	MINUSMINUS  shift 127
	PLUSPLUS  shift 128
	STAR  shift 129
	BNOT  shift 130
	ATTRIBUTE  shift 38
	EXTENSION  shift 131
	CDECL  shift 12
	INLINE  shift 39
	ASM  shift 14
	RESTRICT  shift 15
	BUILTIN_CONSTANT_P  shift 132
	FUNNAME  shift 133
	OFFSETOF  shift 134
	SIZEOF  shift 135
	NPK  shift 136
	IDENTIFIER  shift 137
	STRING  shift 105
	INTEGER  shift 33
	CHARACTER  shift 34
	FLOATCST  shift 35
	ENUM  reduce 47
	CHAR  reduce 47
	DOUBLE  reduce 47
	FLOAT  reduce 47
	INT  reduce 47
	SHORT  reduce 47
	LONG  reduce 47
	STRUCT  reduce 47
	UNION  reduce 47
	SIGNED  reduce 47
	UNSIGNED  reduce 47
	VOID  reduce 47
	RBRACE  reduce 50
	VA_LIST  reduce 47
	TYPEOF  reduce 47
	TYPEDEF_NAME  reduce 47
